<resources>
    <string name="module_preferences_name">preferences</string>
    <string name="confirm_signout_title">Sign out</string>
    <string name="confirm_signout_message">Do you really want to sign out?</string>
    <string name="sign_out_success">Succesfully signed out</string>
    <string name="deletion_success">Account deleted</string>
    <string name="deletion_error_canceled_title">Deletion was canceled</string>
    <string name="deletion_error_canceled_message">The deletion process was canceled. This error may occurs because the internet connection is unstable or not existent</string>
    <string name="deletion_error_unknown_title">Could not delete account</string>
    <string name="delete_dialog_loading_text">Deleting Account…</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_positive">Confirm and delete \"%s\"</string>
    <string name="confirm_deletion_message">By deleting your account you agree that all data which is part of this account will be deleted forever.</string>
    <string name="pref_devmode">Developer mode</string>
    <string name="pref_devmode_show_changelog">Always show changelog at appstart</string>
    <string name="pref_devmode_use_beta_channel">Use beta channel for updates</string>
    <string name="pref_header_data_sync">Account and sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_info">Info</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notifs_notify_update_available">Notify about available updates</string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_title_new_message_notifications">New version</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_user">User</string>
    <string name="prefs_help_manually_check_update">You can manually check for updates by opening the \'About\' page of this app.</string>
    <string name="reason_app_useless">The app is useless to me</string>
    <string name="reason_bad_experience">Bad experience with the software</string>
    <string name="reason_header">Why are you leaving us?</string>
    <string name="reason_login_issues">Issues while trying to log in</string>
    <string name="reason_missing_hardware">I don\'t have got the required hardware (such as AR-lasses etc.)</string>
    <string name="reason_other">Other…</string>
    <string name="note_not_signed_in">You are not signed in.</string>
    <string name="sign_out">Sign out</string>
    <string name="more_notification_settings">More notification settings</string>
    <string name="auto_sync">Synchronize with cloud</string>
    <string name="auto_check_update">Automatically check for updates</string>
    <string name="notifications">Notifications</string>
    <string name="look">Look &amp; Feel</string>
    <string name="design">Design</string>
    <string name="developer_options">Developer options</string>
    <string name="select_theme">Select Theme</string>
    <string name="more_sync_settings">Synchronization</string>
</resources>
